--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "immer": "^10.1.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
