--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.2",
     "remark-gfm": "^4.0.1",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
